<resources>
	<string name="app_name">ERPMUS</string>
	<string name="prompt_email">Email</string>
	<string name="prompt_password">Password</string>
	<string name="action_sign_in">Sign in or register</string>
	<string name="action_sign_in_short">Sign in</string>
	<string name="welcome">"Welcome !"</string>
	<string name="invalid_username">Not a valid username</string>
	<string name="invalid_password">Password must be >5 characters</string>
	<string name="login_failed">"Login failed"</string>

	<string name="empty"></string>

	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="harian_kandang">Harian Kandang</string>
	<string name="tim_panen">Tim Panen</string>
	<string name="penjualan">Penjualan</string>
	<string name="entry_rhk">Entry Rhk</string>
	<string name="laporan_rhk">laporan Rhk</string>
	<string name="konfirmasi_h_1">Konfirmasi H -1</string>
	<string name="ini_adalah_fragment_fitur_penjualan">Ini adalah Fragment Fitur Penjualan</string>

	<string name="mitra">Mitra</string>
	<string name="kandang">Kandang</string>
	<string name="populasi">Populasi (ekor)</string>
	<string name="umur">Umur (hari)</string>
	<string name="berikut">Berikut</string>
	<string name="angka">Angka</string>
	<string name="bb_rata_gr">BB Rata (gr)</string>
	<string name="jumlah_sekat">Jumlah Sekat</string>
	<string name="img_back_desc">Back To Previous Stage</string>
	<string name="add">Add</string>
	<string name="user_account_setting">User Account Setting</string>
	<string name="penerimaan_pakan">Penerimaan Pakan</string>
	<string name="kematian_ayam">Kematian Ayam</string>
	<string name="penerimaan_pakan_zak">Penerimaan Pakan (Zak)</string>
	<string name="sisa_pakan_di_kandang_zak">Sisa Pakan di Kandang (Zak)</string>
	<string name="nomor">Nomor</string>
	<string name="angka_kematian_ekor">Angka Kematian (ekor)</string>
	<string name="keterangan">Keterangan</string>
	<string name="check_list_nekropsi">Check List Nekropsi</string>
	<string name="parameter">Parameter</string>
	<string name="check">Check</string>
	<string name="button_photo">Button for take a photo</string>
	<string name="button_video">Button for take a video</string>
	<string name="capture">Capture</string>
	<string name="button_recording">Button for video recording</string>
	<string name="button_play_video">Button play video</string>
	<string name="button_for_capture_image">Button for capture image</string>
	<string name="pilihan_solusi">Pilihan Solusi</string>
	
	<!--string kalimat-kalimat solusi-->
	<string name="solusi_1">1. Perbaikan manajemen pemeliharaan</string>
	<string name="solusi_2">2. Perbaikan manajemen pemeliharaan dan terapi</string>
	<string name="solusi_3">3. Ketepatan diagnosa dan terapi dijalankan</string>
	<string name="solusi_4">4. Panen dini</string>
	<string name="selesai">Selesai</string>
	<string name="noreg">Noreg</string>
</resources>
