<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal">

	<TextView
		android:id="@+id/txtUrutan"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="0.2"
		android:gravity="center"
		android:text="@string/nomor"
		android:textSize="18sp" />

	<TextView
		android:id="@+id/txtJumlahSekat"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="0.4"
		android:text="@string/jumlah_sekat"
		android:textSize="18sp" />

	<TextView
		android:id="@+id/txtBbRata"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="0.4"
		android:text="@string/bb_rata_gr"
		android:textSize="18sp" />
</LinearLayout>