<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.rhk.subrhk.EntryRhkMitraFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="41dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#114D91"
            app:layout_constraintBottom_toTopOf="@+id/guideline10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.15" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.85" />

            <ImageView
                android:id="@+id/imgBackMitra"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/img_back_desc"
                android:src="@drawable/ic_back_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/entry_rhk"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintStart_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/user_account_setting"
                android:src="@drawable/ic_person_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

        <LinearLayout
            android:id="@+id/llFormMitra"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline9"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toTopOf="@+id/guideline10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/mitra"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/etNamaMitra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginEnd="11dp"
                android:hint="@string/empty"
                android:importantForAutofill="no"
                android:inputType="text|textAutoComplete"
                android:labelFor="@id/llFormMitra"
                android:textSize="22sp"
                tools:targetApi="O" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/kandang"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/etKandangMitra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginEnd="11dp"
                android:hint="@string/empty"
                android:importantForAutofill="no"
                android:inputType="text|textAutoComplete"
                android:labelFor="@id/llFormMitra"
                android:textSize="22sp"
                tools:targetApi="O" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/populasi"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/etPopulasiKandangMitra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginEnd="11dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusableInTouchMode="false"
                android:hint="@string/empty"
                android:importantForAutofill="no"
                android:inputType="text|textAutoComplete"
                android:labelFor="@id/llFormMitra"
                android:textSize="22sp"
                tools:targetApi="O" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/umur"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/etUmurPopulasiKandangMitra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginEnd="11dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusableInTouchMode="false"
                android:hint="@string/empty"
                android:importantForAutofill="no"
                android:inputType="text|textAutoComplete"
                android:labelFor="@id/llFormMitra"
                android:textSize="22sp"
                tools:targetApi="O" />

        </LinearLayout>

        <Button
            android:id="@+id/btnBerikutMitra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:drawableEnd="@drawable/ic_next_white"
            android:text="@string/berikut"
            android:textAlignment="textStart"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline9"
            app:layout_constraintTop_toTopOf="@+id/guideline11" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>